Adding changes for overloading io operator

--- a/overload_ops_muliply/Makefile
+++ b/overload_ops_muliply/Makefile
@@ -1,3 +1,5 @@
-all : Fraction
-Fraction : Fraction.o main.o 
+all : Fraction_mult Fraction_io
+Fraction_mult : Fraction.o main.o
+	g++ -o $@ $^
+Fraction_io : Fraction.o main_io_overload.o
 	g++ -o $@ $^
